# krcmd

./: .gitignore  Cargo.toml  README.md  example.allowed_signers  krcmd-host.example.toml
crates/krcmd/: Cargo.toml
crates/krcmd-host/: Cargo.toml
crates/krcmd-host/src/: config.rs  main.rs  registry.rs  replay.rs  server.rs
crates/krcmd-host/src/commands/: launch_code.rs  mod.rs
crates/krcmd-proto/: Cargo.toml
crates/krcmd-proto/src/: auth.rs  commands.rs  lib.rs  protocol.rs
crates/krcmd/src/: client.rs  config.rs  main.rs
