[workspace]
resolver = "2"
members = ["crates/krcmd-proto", "crates/krcmd-host", "crates/krcmd"]

[workspace.package]
version = "0.1.0"
edition = "2021"
license = "MIT"
authors = ["Ken Hiatt <ken.hiatt@gmail.com>"]
repository = "https://github.com/kenhia/krcmd"

[workspace.dependencies]
krcmd-proto = { path = "crates/krcmd-proto" }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "1"
