[package]
name = "krcmd-proto"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
description = "Shared protocol, signing, and command definitions for krcmd"

[dependencies]
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
ssh-key = { version = "0.6", features = ["ed25519", "std", "rand_core"] }
base64 = "0.22"
rand = "0.8"
