[package]
name = "krcmd"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
description = "krcmd remote CLI: signs and sends commands to the host daemon"

[[bin]]
name = "krcmd"
path = "src/main.rs"

[dependencies]
krcmd-proto = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
ssh-key = { version = "0.6", features = ["ed25519", "std"] }
clap = { version = "4", features = ["derive", "env"] }
ureq = { version = "2", features = ["json"] }
toml = "0.8"
dirs = "5"
whoami = "1"
anyhow = "1"
